--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-	
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,10 +40,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-			</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency> 
+	    <groupId>org.springframework.boot</groupId> 
+	    <artifactId>spring-boot-starter-validation</artifactId> 
+	</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
