--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
+## JWT ##
+jwt.expiracao=30
+jwt.chave-assinatura=YSBsZWJyZSDDqSBicmFuY2E=
+
 ## Methods ##
 spring.mvc.hiddenmethod.filter.enabled=true
